--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql2": "^3.9.2",
     "node-fetch": "^2.6.7",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
