--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@vercel/postgres": "^0.5.1",
     "axios": "^1.2.1",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.9.2",
     "node-fetch": "^2.6.7",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.27.0"
+    "sequelize": "^6.27.0",
+    "videogame-server": "file:"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
