--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{ "src": "./index.js","use": "@now/node"}],
+  "builds": [{ "src": "index.js","use": "@vercel/node", "config": { "includeFiles": ["dist/**"] }}],
   "routes": [{ "src": "/(.*)", "dest": "./index.js" }]
 }
